fix z-index

--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -202,6 +202,7 @@
     padding: 35px 40px;
     overflow-y: scroll;
     overflow-x: hidden;
+    z-index: 999999;
     .menu-mobile-inner {
         margin: 60px 0;
         a {
